# fractal_gl

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: bit_array.hpp  dragon.hpp  fractal.hpp  numeric_types.h  shader.h  sierpinski.hpp
shaders/: random_sierpinski.fs  random_sierpinski.vs  shader.fs  shader.vs
src/: dragon.cpp  fractal_creator.cpp  main.cpp  sierpinski.cpp
